[package]
name = "inventory-management"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
soroban-sdk = "0.2"
soroban-auth = "0.2"  # For authentication and authorization
soroban-log = "0.2"   # For logging within the contract

[dev-dependencies]
soroban-env-host = "0.2" # For local testing
